# hull-llm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: CHECKSUMS.sha256
demo/docs/: board-minutes.txt  q3-revenue.txt  risk-report.txt
demo/docs-nock/: hoon-primer.txt  jets-and-zk.txt  nock-spec.txt
docs/: architecture.md  cli-reference.md  configuration.md  quickstart.md
kernels/vesl/: Cargo.toml  build.rs
kernels/vesl/src/: lib.rs
scripts/: demo.sh  diag-reproduce.sh  fakenet-harness.sh
src/: api.rs  chain.rs  config.rs  ingest.rs  lib.rs  llm.rs  main.rs  merkle.rs  noun_builder.rs  retrieve.rs  signing.rs  tx_builder.rs  types.rs  wallet.rs  wallet_kernel.rs
tests/: e2e_adversarial.rs  e2e_core.rs  e2e_fakenet.rs  e2e_forge.rs  e2e_ollama.rs  e2e_pipeline.rs  e2e_prover.rs  test_payload.jam
