[package]
name = "hull-llm"
version = "0.1.0"
edition = "2024"

[lib]
name = "hull_llm"
path = "src/lib.rs"

[[bin]]
name = "hull-llm"
path = "src/main.rs"

# Vesl pin: hull-split-base (ee88748)
# Nockchain pin: a19f801 (nockchain/nockchain master tip)
#
# hull-llm resolves vesl-core strictly via the git-dep at the pin above —
# no local `[patch]` redirect to ../vesl-core. hull-llm is a standalone
# repository; bumping the vesl-core rev here is the explicit channel for
# consuming upstream changes. The nockchain [patch] block at the bottom
# keeps the local-sibling convenience for upstream co-development.

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["limit"] }
tower = { version = "0.5", features = ["limit", "buffer"] }
toml = "0.8"
zeroize = "1"
bytes = "1"
getrandom = "0.3"

# Optional: Rig (0xPlaygrounds/rig) as LLM-client scaffolding.
# Gated behind the `rig` feature. Phase 0 captures the dep only; the stub
# impl in src/llm.rs does not yet call into rig. Phase 1 replaces the stub
# with real OpenAI/Anthropic completion calls. Rig is pre-1.0 and the
# maintainers expect breaking changes, so pin the exact version.
# See docs/specs/RUST_HARNESS_SURVEY.md for the adoption plan.
rig-core = { version = "=0.35.0", optional = true }

# --- Vesl extracted crates (git-dep to zkvesl/vesl-core) ---
nock-noun-rs      = { git = "https://github.com/zkvesl/vesl-core.git", rev = "ee88748463297d8279ed8336af9b9d21ba78b11e" }
nockchain-tip5-rs = { git = "https://github.com/zkvesl/vesl-core.git", rev = "ee88748463297d8279ed8336af9b9d21ba78b11e", features = ["serde"] }
vesl-core         = { git = "https://github.com/zkvesl/vesl-core.git", rev = "ee88748463297d8279ed8336af9b9d21ba78b11e", features = ["clap"] }

# --- Nockchain upstream ---
nockvm           = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockvm_macros    = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockapp          = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a", default-features = false }
nockapp-grpc     = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockchain-types  = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockchain-math   = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
ibig             = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
noun-serde       = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
zkvm-jetpack     = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }

# Optional wallet kernel for dumbnet key management
kernels-open-wallet = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a", optional = true }

# --- Local kernel crate (moved with hull-llm from vesl) ---
kernels_vesl = { path = "kernels/vesl" }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
kernels-forge = { path = "kernels/forge" }
# kernels-open-wallet is pulled via the `dumbnet` / `_wallet_kernel_tests` feature;
# it needs wal.jam compiled from a local nockchain checkout, which isn't available
# in the git-fetched source tree. Enable a feature to activate it.

[features]
# Real-key settlement against a live nockchain node.
dumbnet = ["dep:kernels-open-wallet"]
# Gate wallet kernel integration tests behind a feature flag.
# Boot takes ~5-10s for the 20MB wal.jam kernel.
_wallet_kernel_tests = ["dep:kernels-open-wallet"]
# Rig agent framework as an alternative LlmProvider. Phase 0: dep-capture
# stub only. See docs/specs/RUST_HARNESS_SURVEY.md.
rig = ["dep:rig-core"]

# --- Local [patch] override (nockchain only) ---
# When a sibling nockchain/nockchain checkout is present at ../nockchain,
# Cargo resolves the nockchain git-deps above through local paths for
# fast upstream co-development. Without the sibling, Cargo falls back to
# git resolution and hull-llm still builds standalone.
#
# vesl-core is deliberately NOT patched to a local sibling: hull-llm is a
# standalone repo and consumes vesl-core only through the pinned git-dep.
# Bump the rev at lines 49-51 above to pick up upstream changes.
[patch."https://github.com/nockchain/nockchain.git"]
nockvm              = { path = "../nockchain/crates/nockvm/rust/nockvm" }
nockvm_macros       = { path = "../nockchain/crates/nockvm/rust/nockvm_macros" }
nockapp             = { path = "../nockchain/crates/nockapp" }
nockapp-grpc        = { path = "../nockchain/crates/nockapp-grpc" }
nockchain-types     = { path = "../nockchain/crates/nockchain-types" }
nockchain-math      = { path = "../nockchain/crates/nockchain-math" }
noun-serde          = { path = "../nockchain/crates/noun-serde" }
ibig                = { path = "../nockchain/crates/nockvm/rust/ibig" }
zkvm-jetpack        = { path = "../nockchain/crates/zkvm-jetpack" }
kernels-open-wallet = { path = "../nockchain/crates/kernels/wallet" }
